--- a/public/index.html
+++ b/public/index.html
@@ -26,22 +26,9 @@
     -->
     <title>How to Win at Cards</title>
   </head>
-  <body>
-    <div id="root">
-      <script
-        async
-        src="https://www.googletagmanager.com/gtag/js?id=G-R84ZFX4D61"
-      ></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
 
-        gtag("config", "G-R84ZFX4D61");
-      </script>
-    </div>
+  <body>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
